# ML-Template

./: .gitignore  Dockerfile  LEARNING_PATH.md  README.md  USAGE_GUIDE.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/data/: california_housing.yaml  titanic.yaml
configs/evaluation/: default.yaml
configs/experiment/: california_housing.yaml  smoke_california.yaml  smoke_titanic.yaml  titanic.yaml
configs/features/: default.yaml  none.yaml
configs/model/: catboost.yaml  decision_tree.yaml  knn.yaml  lightgbm.yaml  logistic_regression.yaml  mlp.yaml  naive_bayes.yaml  random_forest.yaml  stacking.yaml  svm.yaml  voting.yaml  xgboost.yaml
configs/preprocessing/: default.yaml  minimal.yaml
configs/serving/: default.yaml
configs/training/: default.yaml  smoke.yaml
configs/tuning/: default.yaml  smoke.yaml
scripts/: download_data.py
src/ml_pipeline/: __init__.py  cli.py
src/ml_pipeline/config/: __init__.py  loader.py  schema.py
src/ml_pipeline/core/: __init__.py  artifacts.py  registry.py  types.py
src/ml_pipeline/data/: __init__.py  loaders.py  splitters.py  validation.py
src/ml_pipeline/eda/: __init__.py  base.py  report.py
src/ml_pipeline/evaluation/: __init__.py  error_analysis.py  explain.py  plots.py  (+2 more)
tests/: conftest.py  test_api.py  test_bundle_roundtrip.py  test_config.py  test_features.py  test_loaders.py  test_metrics.py  test_model_mlp.py  test_models_classical.py  test_preprocessing.py  test_registry.py  test_splitters.py  test_validation.py
(+52 files in other folders)
